# kosnp_diode

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cross-build.sh  linux-build.sh
app/Diode/: CMakeLists.txt
app/Diode/src/: DiodeCoordinator.cpp  DiodeCoordinator.hpp  main.cpp
components/: CMakeLists.txt
components/ConfigurationManager/: CMakeLists.txt
components/ConfigurationManager/include/: ConfigurationManager.cdl  ConfigurationManager.hpp  ConfigurationManagerException.hpp  ConfigurationManagerImplFactory.hpp  ConfigurationManagerProxy.hpp  ConfigurationManagerSkeleton.hpp
components/ConfigurationManager/src/: ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.hpp
components/Interrupter/: CMakeLists.txt
components/Interrupter/include/: Interrupter.hpp  InterrupterException.hpp  InterrupterImplFactory.hpp
components/Interrupter/src/: InterrupterImpl.cpp  InterrupterImpl.hpp
components/ServiceManager/: CMakeLists.txt
components/ServiceManager/include/: ServiceManager.hpp  ServiceManagerException.hpp  ServiceManagerImplFactory.hpp
components/ServiceManager/src/: ServiceManagerImpl.cpp  ServiceManagerImpl.hpp
components/TcpReceiver/: CMakeLists.txt
components/TcpReceiver/include/: TcpReceiver.cdl  TcpReceiver.hpp  TcpReceiverException.hpp  TcpReceiverImplFactory.hpp  TcpReceiverProxy.hpp  TcpReceiverSkeleton.hpp
components/TcpReceiver/src/: TcpReceiverImpl.cpp  TcpReceiverImpl.hpp
components/TcpSender/: CMakeLists.txt
components/TcpSender/include/: TcpSender.cdl  TcpSender.hpp  TcpSenderException.hpp  TcpSenderImplFactory.hpp  TcpSenderProxy.hpp  TcpSenderSkeleton.hpp
components/TcpSender/src/: TcpSenderImpl.cpp  TcpSenderImpl.hpp
dto/: CMakeLists.txt
dto/DataItem/: CMakeLists.txt
dto/DataItem/include/: DataItem.hpp  DataItem.idl
entities/: CMakeLists.txt
entities/Anode/: CMakeLists.txt
entities/Anode/client/: CMakeLists.txt
entities/Anode/client/include/: AnodeClient.hpp  AnodeClientImplFactory.hpp
entities/Anode/client/src/: AnodeClientImpl.cpp  AnodeClientImpl.hpp
entities/Anode/include/: AnodeDescription.h
entities/Anode/server/: CMakeLists.txt
entities/Anode/server/include/: Anode.edl  AnodeServer.hpp  AnodeServerImplFactory.hpp
entities/Anode/server/src/: AnodeServerImpl.cpp  AnodeServerImpl.hpp
entities/Anode/src/: AnodeCoordinator.cpp  AnodeCoordinator.hpp  main.cpp
entities/Cathode/: CMakeLists.txt
entities/Cathode/client/: CMakeLists.txt
entities/Cathode/client/include/: CathodeClient.hpp  CathodeClientImplFactory.hpp
entities/Cathode/client/src/: CathodeClientImpl.cpp  CathodeClientImpl.hpp
entities/Cathode/include/: CathodeDescription.h
entities/Cathode/server/: CMakeLists.txt
entities/Cathode/server/include/: Cathode.edl  CathodeServer.hpp  CathodeServerImplFactory.hpp
entities/Cathode/server/src/: CathodeServerImpl.cpp  CathodeServerImpl.hpp
entities/Cathode/src/: CathodeCoordinator.cpp  CathodeCoordinator.hpp  main.cpp
entities/Env/: CMakeLists.txt
entities/Env/src/: env.cpp
entities/Klog/: CMakeLists.txt
entities/Klog/include/: Klog.edl
entities/Klog/src/: klog.c
entities/KlogStorage/: CMakeLists.txt
entities/KlogStorage/include/: KlogStorage.edl
entities/KlogStorage/src/: main.c
entities/NetVfs/: CMakeLists.txt
entities/NetVfs/src/: NetVfs.edl  net_vfs.c
entities/ServiceManager/: CMakeLists.txt
entities/ServiceManager/include/: ServiceManager.edl
entities/ServiceManager/src/: ServiceManagerCoordinator.cpp  ServiceManagerCoordinator.hpp  main.cpp
images/: CMakeLists.txt
images/Diode/: CMakeLists.txt
images/Diode/src/: init.yaml.in  security.psl  security.psl.in  trusted.psl
interfaces/: CMakeLists.txt
interfaces/Consumer/: CMakeLists.txt
interfaces/Consumer/include/: Consumer.hpp  Consumer.idl  ConsumerProxy.hpp  ConsumerSkeleton.hpp
interfaces/Consumer/src/: ConsumerProxy.cpp  ConsumerSkeleton.cpp
interfaces/DataStorage/: CMakeLists.txt
interfaces/DataStorage/include/: DataStorage.hpp  DataStorage.idl  DataStorageProxy.hpp  DataStorageSkeleton.hpp
interfaces/DataStorage/src/: DataStorageProxy.cpp  DataStorageSkeleton.cpp
interfaces/Service/: CMakeLists.txt
interfaces/Service/include/: Service.hpp  Service.idl  ServiceProxy.hpp  ServiceSkeleton.hpp
interfaces/Service/src/: ServiceProxy.cpp  ServiceSkeleton.cpp
libs/: CMakeLists.txt
libs/BaseService/: CMakeLists.txt
libs/BaseService/include/: BaseService.hpp
libs/BaseService/src/: BaseService.cpp
libs/Exception/: CMakeLists.txt
libs/Exception/include/: BaseException.hpp  ExceptionHelper.hpp
libs/Exception/src/: ExceptionHelper.cpp
libs/NkKosTransport/: CMakeLists.txt
libs/NkKosTransport/include/: NkKosTransport.hpp
libs/Runner/: CMakeLists.txt
libs/Runner/include/: Runner.hpp
libs/Threading/: CMakeLists.txt
libs/Threading/include/: StopSource.hpp  StopToken.hpp  Task.hpp
